# jobs

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  how-to-add-integrations.md  integration.md  package.json  pnpm-lock.yaml  site.md  turbo.json  vercel.json
apps/api/: main.py  package.json  pyproject.toml  ruff.toml
apps/api/core/: config.py  database.py  utils.py
apps/api/models/: schemas.py
apps/api/pipeline/: agent_graph.py  graph.py  source_configs.py  state.py
apps/api/pipeline/nodes/: dedup.py  extract.py  fetch.py  filter.py  store.py
apps/api/pipeline/sources/: __init__.py  arbeitnow.py  ashbyhq.py  authenticjobs.py  base.py  greenhouse.py  hackernews.py  himalayas.py  jobicy.py  lever.py  recruitee.py  reddit.py  registry.py  remotefirstjobs.py  remoteok.py  remotewlb.py  remotive.py  smartrecruiters.py  smashingjobs.py  teamtailor.py  utils.py  weworkremotely.py  workable.py  workingnomads.py  x.py
apps/api/pipeline/sources/hackernews/: __init__.py  algolia.py  constants.py  firebase.py  parser.py  source.py
apps/api/routers/: agents.py  cron.py  jobs.py  saved.py  scan.py  searches.py
apps/api/tests/: test_filter.py  test_hackernews_source.py  test_pipeline.py  test_x_source.py
apps/web/: components.json  env.ts  next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: animated-beam-hero.tsx  app-sidebar.tsx  hero.tsx  html-renderer.tsx  job-card.tsx  job-filters.tsx  nav-user.tsx  nested-border-beam.tsx  orbit-integrations.tsx  providers.tsx  query-provider.tsx  (+2 more)
(+52 files in other folders)
